# resources/openApi.yaml
@@ -10,9 +10,29 @@ produces:
   - "application/json"
 tags:
   - name: pokemon
-    description: Endpoints using pokemon 
+    description: Endpoints using pokemon
 
 paths:
+  /pokemon/all:
+    get:
+      tags:
+        - pokemon
+      description: "Returns all pokemon information"
+      operationId: "getAllPokemon"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/AllPokemonResponse"
+        "400":
+          description: "Response with error."
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: "Response with error."
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
   /pokemon/{id}:
     get:
       tags:
@@ -37,8 +57,17 @@ paths:
           description: "Response with error."
           schema:
             $ref: "#/definitions/ErrorResponse"
-          
+
 definitions:
+  AllPokemonResponse:
+    type: "object"
+    required:
+      - "allPokemon"
+    properties:
+      allPokemon:
+        type: "array"
+        items:
+          $ref: "#/definitions/Pokemon"
 
   Pokemon:
     type: "object"
@@ -55,24 +84,24 @@ definitions:
         type: "string"
       types:
         type: "array"
-        items: 
+        items:
           $ref: "#/definitions/NameUrl"
       abilities:
         type: "array"
         items:
           $ref: "#/definitions/NameUrl"
-          
+
   NameUrl:
     type: "object"
     required:
       - name
       - url
     properties:
-      name: 
+      name:
         type: "string"
       url:
         type: "string"
-          
+
   ErrorResponse:
     type: "object"
     required:
@@ -84,4 +113,4 @@ definitions:
           type: "string"
         example:
           - "foo"
-          - "bar"   
+          - "bar"
